force-app/main/default/objects/AV_RecordConfiguration__c/AV_RecordConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AV_RecordConfiguration</label>
</CustomObject>