force-app/main/default/objects/AV_RecordConfiguration__c/fields/AV_RecordType__c.field-meta.xml
<CustomField>
    <fullName>AV_RecordType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AV_RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>