force-app/main/default/objects/AV_RecordConfiguration__c/fields/AV_Status__c.field-meta.xml
<CustomField>
    <fullName>AV_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AV_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>