force-app/main/default/objects/AV_RecordConfiguration__c/fields/AV_Type__c.field-meta.xml
<CustomField>
    <fullName>AV_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AV_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>